cmake_minimum_required(VERSION 3.9)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ main.cpp cmake-build-debug/P3.cpp cmake-build-debug/CMakeFiles/P4.cpp cmake-build-debug/P5.cpp cmake-build-debug/CMakeFiles/P6.cpp cmake-build-debug/P7.cpp cmake-build-debug/test.cpp PP1.cpp PP2.cpp PP3.cpp PP4.cpp PP5.cpp PP6.cpp PP7.cpp PP8.cpp help.cpp help.c cmake-build-debug/help_2.c test_1.c)