cmake_minimum_required(VERSION 3.10)
project(202006024)

set(CMAKE_CXX_STANDARD 98)

add_executable(202006024 main.cpp bin2dec.cpp argslib.cpp faceobj.cpp structure.cpp filed.cpp pointexample.cpp static_function.cpp friends.cpp friendclass.cpp consttype.cpp array.cpp forbasedonrange.cpp pointer.cpp jichengpaisheng.cpp operator+.cpp operator-single.cpp "relationship operator.cpp" ++--override.cpp =override.cpp calloverride.cpp 【】override.cpp memberrequestoverrride.cpp other.cpp kaoshi1.cpp kaoshi2.cpp kaoshi3.cpp kaoshi4.cpp 20200626.cpp 20200627.cpp inoutoverride.cpp)